--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Ignore all private key files
+*.pem
+*.ppk
+
+# Ignore the entire keys folder (optional)
+keys/
+
+# Ignore all deployment Configs
+/deployment/config.json
